@@ -1,3 +1,9 @@
+2008-02-11  Zeeshan Ali Khattak  <zeenix@gmail.com>
+
+	* src/av-cp/renderer-controls.c:
+
+	Implement seeking.
+
 2008-02-10  Zeeshan Ali Khattak  <zeenix@gmail.com>
 
 	* src/av-cp/renderer-combo.c:
